--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
               </li>
 
 
-              <li class="active a">
+              <li class="active">
                 <a th:href="@{'/wines/list'}" title="Wine List">Wine</a>
                 <ul class="sub-menu">
                   <!--                                    <li class="active"><a href="home1.html" title="">Red</a></li>-->
