--- a/wineshare/src/main/resources/templates/wine/wineList.html
+++ b/wineshare/src/main/resources/templates/wine/wineList.html
@@ -244,6 +244,7 @@
                             <option value="priceAsc">가격 낮은 순</option>
                             <option value="ratingDesc">평점 높은 순</option>
                             <option value="ratingAsc">평점 낮은 순</option>
+                            <option value="cellarDesc">인기 많은 순</option>
                         </select>
                     </div>
                     <div class="text-title">
