--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -50,7 +50,7 @@
 
 .marketing_list_wrap{
     width:100%;
-    height:100%;
+    height: 400px;
     border: 1px solid #FFFFFF;
     position:relative;
 
